fc-5: compiles